# certgen

./: .gitignore  Cargo.toml  Dockerfile  README.md  certs.yml
src/: certgen.rs  gen.rs  main.rs  spec.rs
