[package]
name = "certgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.52"
log = "0.4"
env_logger = "0.9"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
